WIP VML-1 Move back to JDK 11 and Vaadin 23
- Moved back to Spring 2.7.14
- Moved back to JDK 11
- Moved back to Vaadin 23.4.0
- Moved org.apache.commons commons-text to 1.10.0
- Replaced some JDK15+ features (textblocks, records, pattern matching on instance of...)